--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     api 'com.android.support:cardview-v7:27.1.1'
     api 'com.android.support:recyclerview-v7:27.0.0'
     api 'de.hdodenhof:circleimageview:2.2.0'
+    api 'com.google.android.gms:play-services-places:16.0.0'
 }
