--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        .
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyChzL_RETVgMiVI4poAZDP9OUDltyyweKU" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +23,8 @@
         </activity>
         <activity android:name=".UserProfileActivity" />
         <activity android:name=".currentUserActivity" />
-        <activity android:name=".AddGenericPostActivity"></activity>
+        <activity android:name=".AddGenericPostActivity" />
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
