--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.developer.ziptown">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,22 +11,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        .
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyChzL_RETVgMiVI4poAZDP9OUDltyyweKU" />
 
-        <activity android:name=".MainActivity">
+        <activity android:launchMode="singleTask" android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".UserProfileActivity" />
+        <activity android:name=".currentUserActivity" />
+        <activity android:name=".AddGenericPostActivity" />
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".LandingPageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UserProfileActivity" />
-        <activity android:name=".currentUserActivity" />
-        <activity android:name=".AddGenericPostActivity" />
-        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
