--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     api 'com.github.joielechong:countrycodepicker:2.1.8'
     api 'com.jaeger.statusbarutil:library:1.4.0'
     api group: 'com.googlecode.libphonenumber', name: 'libphonenumber', version: '8.9.16'
+
+    api 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:2.1.0'
 }
