--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,6 @@ dependencies {
     api 'com.android.support:cardview-v7:27.1.1'
     api 'com.android.support:recyclerview-v7:27.0.0'
     api 'de.hdodenhof:circleimageview:2.2.0'
-    api 'com.google.android.gms:play-services-places:16.0.0'
     api 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     api 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
 
@@ -40,5 +39,13 @@ dependencies {
     api 'com.jaeger.statusbarutil:library:1.4.0'
     api group: 'com.googlecode.libphonenumber', name: 'libphonenumber', version: '8.9.16'
 
+
+    api "com.android.support:support-compat:27.0.0"
+    api 'com.google.firebase:firebase-core:16.0.0'
+    api 'com.google.android.gms:play-services-places:16.0.0'
+    api 'com.google.firebase:firebase-messaging:17.3.4'
     api 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:2.1.0'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
