--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_launcher" />
+
         <activity
             android:name=".activities.MainActivity"
             android:launchMode="singleTask" />
@@ -55,19 +56,22 @@
         <activity android:name=".activities.signupActivities.CityActivity" />
         <activity android:name=".activities.signupActivities.DriverOrPassengerActivity" />
         <activity android:name=".activities.signupActivities.TermsAndConditionsActivity" />
-        <activity android:name=".activities.HomeActivity"></activity>
-        <activity android:name=".activities.profileActivities.MessengerActivity"></activity>
+        <activity android:name=".activities.HomeActivity" />
+        <activity android:name=".activities.profileActivities.MessengerActivity" />
 
         <service android:name=".services.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <receiver android:name=".broadcast.FCMBroadcastReceiver">
             <intent-filter>
-                <action android:name="ziptown.action.newToken"/>
+                <action android:name="ziptown.action.newToken" />
             </intent-filter>
         </receiver>
+
+        <activity android:name=".activities.profileActivities.ChatsActivity"></activity>
     </application>
 
 </manifest>
